--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -23,6 +23,8 @@
   "new.create": "Create list",
   "new.armyComposition": "Army Composition",
   "new.grandArmy": "Grand Army",
+  "new.6th": "6th Edition",
+  "new.mdn": "Manuscritos de Nuth",
   "new.8th": "8th edition",
   "misc.name": "Name (optional):",
   "misc.description": "Description (optional):",
