--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -23,6 +23,8 @@
   "new.create": "Crear lista",
   "new.armyComposition": "Army Composition",
   "new.grandArmy": "Grand Army",
+  "new.6th": "6a Edición",
+  "new.mdn": "Manuscritos de Nuth",
   "new.8th": "8. Edition",
   "misc.name": "Nombre (opcional):",
   "misc.description": "Descripción (opcional):",
