--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,6 +10,7 @@
   "footer.changelog": "News",
   "app.point": "pt",
   "app.points": "pts",
+  "app.slots": "slots",
   "app.free": "free",
   "home.empty": "Create your first list.",
   "home.newList": "New list",
@@ -74,8 +75,11 @@
   "editor.mercenaries": "Mercenaries",
   "editor.allies": "Allies",
   "editor.tooManyPoints": "pts too many",
+  "editor.tooManySlots": "slots too many",
   "editor.availablePoints": "pts available",
+  "editor.availableSlots": "slots available",
   "editor.missingPoints": "pts missing",
+  "editor.missingSlots": "slots missing",
   "editor.comingSoon": "Coming soon",
   "editor.confirmDelete": "Do you really want to delete the list {list}?",
   "editor.noRuleFound": "No rule currently available.",
