add slots translations

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -24,6 +24,7 @@
   "new.armyComposition": "Armeezusammenstellung",
   "new.grandArmy": "Großes Heer",
   "new.8th": "8. Edition",
+  "new.6th": "6. Edition",
   "misc.name": "Name (optional):",
   "misc.description": "Beschreibung (optional):",
   "misc.points": "Punkte:",
@@ -76,6 +77,7 @@
   "editor.tooManyPoints": " Pkte. zu viel",
   "editor.availablePoints": " Pkte. verfügbar",
   "editor.missingPoints": " Pkte. fehlen",
+  "editor.missingSlots": "slots missing",
   "editor.comingSoon": "Folgt demnächst",
   "editor.confirmDelete": "Möchtest du die Liste {list} wirklich löschen?",
   "editor.noRuleFound": "Momentan keine Regel verfügbar.",
