--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -25,6 +25,7 @@
   "new.armyComposition": "Army Composition",
   "new.grandArmy": "Grand Army",
   "new.8th": "8th edition",
+  "new.6th": "6th edition",
   "misc.name": "Name (optional):",
   "misc.description": "Description (optional):",
   "misc.points": "Points:",
