--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -23,7 +23,8 @@
   "new.create": "Crear lista",
   "new.armyComposition": "Army Composition",
   "new.grandArmy": "Grand Army",
-  "new.8th": "8. Edition",
+  "new.8th": "8a Edición",
+  "new.6th": "6a Edición",
   "misc.name": "Nombre (opcional):",
   "misc.description": "Descripción (opcional):",
   "misc.points": "Puntos:",
@@ -74,8 +75,11 @@
   "editor.mercenaries": "Mercenarios",
   "editor.allies": "Aliados",
   "editor.tooManyPoints": "Demasiados pts",
+  "editor.tooManySlots": "Demasiadas unidades",
   "editor.availablePoints": "pts disponibles",
+  "editor.availableSlots": "unidades disponibles",
   "editor.missingPoints": "Faltan pts",
+  "editor.missingSlots": "faltan unidades",
   "editor.comingSoon": "Próximamente",
   "editor.confirmDelete": "Do you really want to delete the list {list}?",
   "editor.noRuleFound": "No rule currently available.",
