--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -24,6 +24,7 @@
   "new.armyComposition": "Composition d'Armée",
   "new.grandArmy": "Grande Armée",
   "new.8th": "8ème Édition",
+  "new.6th": "6ème Édition",
   "misc.name": "Nom (optionnel):",
   "misc.description": "Description (optionnel):",
   "misc.points": "Points:",
@@ -76,6 +77,7 @@
   "editor.tooManyPoints": "pts en trop",
   "editor.availablePoints": "pts disponibles",
   "editor.missingPoints": "pts manquants",
+  "editor.missingSlots": "slots missing",
   "editor.comingSoon": "À venir",
   "editor.confirmDelete": "Voulez-vous vraiment supprimer la liste {list}?",
   "editor.noRuleFound": "Règles non disponibles pour le moment.",
