--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -24,6 +24,7 @@
   "new.armyComposition": "Composizione dell'esercito",
   "new.grandArmy": "Grande Armata",
   "new.8th": "8. Edition",
+  "new.6th": "6. Edition",
   "misc.name": "Nome (opzionale):",
   "misc.description": "Descrizione (opzionale):",
   "misc.points": "Punti:",
@@ -76,6 +77,7 @@
   "editor.tooManyPoints": "Troppi Punti",
   "editor.availablePoints": "Punti Disponibili",
   "editor.missingPoints": "Punti Mancanti",
+  "editor.missingSlots": "slots missing",
   "editor.comingSoon": "Prossimamente",
   "editor.confirmDelete": "Vuoi davvero eliminare la lista {list}?",
   "editor.noRuleFound": "Nessuna regola attualmente disponibile.",
