--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -24,6 +24,7 @@
   "new.armyComposition": "Kompozycja armii",
   "new.grandArmy": "Armia podstawowa",
   "new.8th": "8 edycja",
+  "new.6th": "6 edycja",
   "misc.name": "Nazwa (opcjonalnie)",
   "misc.description": "Opis (opcjonalnie)",
   "misc.points": "Punkty",
@@ -76,6 +77,7 @@
   "editor.tooManyPoints": "pkt. za dużo",
   "editor.availablePoints": "dostępnych pkt.",
   "editor.missingPoints": "brakujących pkt.",
+  "editor.missingSlots": "slots missing",
   "editor.comingSoon": "Wkrótce",
   "editor.confirmDelete": "Czy na pewno chcesz usunąć rozpiskę {list}?",
   "editor.noRuleFound": "Zasada obecnie niedostępna",
