add weapons and ranged transalations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -178,7 +178,9 @@
   "unit.noOptions": "No options available.",
   "unit.unitSize": "Unit size:",
   "unit.command": "Command:",
-  "unit.equipment": "Weapons:",
+  "unit.equipment": "Equipment:",
+  "unit.melee": "Weapons:",
+  "unit.ranged": "Missile Weapons",
   "unit.armor": "Armor:",
   "unit.options": "Options:",
   "unit.mount": "Mount:",
