--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -178,7 +178,9 @@
   "unit.noOptions": "Sin opciones disponibles.",
   "unit.unitSize": "Tamaño de la unidad:",
   "unit.command": "Grupo de mando:",
-  "unit.equipment": "Armas:",
+  "unit.equipment": "Equipo:",
+  "unit.melee": "Armas:",
+  "unit.ranged": "Armas de Proyectiles",
   "unit.armor": "Armadura:",
   "unit.options": "Opciones:",
   "unit.mount": "Montura:",
